layout issue fix in Chrome - didn't quite understand why

--- a/css/general.css
+++ b/css/general.css
@@ -355,7 +355,7 @@ body{
     font-size:0.9em;
     display:block;
     text-align:right;
-    position: absolute;
+    /*position: absolute;*/
     bottom: 0;
 }
 #reviews .review {
